@@ -17,7 +17,7 @@ Description: programming interface to Nokia internet tablet calibration data
 Package: libcal1-dbg
 Section: libs
 Architecture: any
-Depends: libcal1 (= ${Source-Version})
+Depends: libcal1 (= ${source:Version})
 Description: Debug symbols for libcal1.
 
 Package: libcal-dev
